--- a/action.yml
+++ b/action.yml
@@ -12,6 +12,14 @@ inputs:
     description: "Version of ESP-IDF docker image to use"
     default: "latest"
     required: false
+  esp_idf_docker_image:
+    description: "Docker Repository to obtain the ESP-IDF image from"
+    default: "espressif/idf"
+    required: false
+  extra_docker_args:
+    description: "Additional arguments to pass to the docker run command"
+    default: ""
+    required: false
   target:
     description: "ESP32 variant to build for"
     default: "esp32"
@@ -26,7 +34,11 @@ runs:
   steps:
     - run: |
         export IDF_TARGET=$(echo "${{ inputs.target }}" | tr '[:upper:]' '[:lower:]' | tr -d '_-')
-        docker run -t -e IDF_TARGET="${IDF_TARGET}" -v "${GITHUB_WORKSPACE}:/app/${{ github.repository }}" \
-        -w "/app/${{ github.repository }}/${{ inputs.path }}" espressif/idf:${{ inputs.esp_idf_version }} \
+        docker run -t \
+        -e IDF_TARGET="${IDF_TARGET}" \
+        -v "${GITHUB_WORKSPACE}:/app/${{ github.repository }}" \
+        -w "/app/${{ github.repository }}/${{ inputs.path }}" \
+        ${{ inputs.extra_docker_args }} \
+        ${{ inputs.esp_idf_docker_image }}:${{ inputs.esp_idf_version }} \
         /bin/bash -c 'git config --global --add safe.directory "*" && ${{ inputs.command }}'
       shell: bash
