--- a/.github/workflows/action.yml
+++ b/.github/workflows/action.yml
@@ -6,11 +6,11 @@ branding:
 inputs:
   path:
     description: "Relative path under $GITHUB_WORKSPACE to place the repository"
-    default: ""
+    default: "link-esp-example"
     required: false
   esp_idf_version:
     description: "Version of ESP-IDF docker image to use"
-    default: "latest"
+    default: "v4.4.4"
     required: false
   esp_idf_docker_image:
     description: "Docker Repository to obtain the ESP-IDF image from"
