--- a/.github/workflows/build-espidf.yml
+++ b/.github/workflows/build-espidf.yml
@@ -4,10 +4,10 @@ name: Build ESP32 Firmware
 on:
   push:
     branches:
-      - main
+      - main  # Specify the branch or branches you want to trigger on push
   pull_request:
     branches:
-      - main
+      - main  # Specify the branch or branches you want to trigger on pull requests
 
 jobs:
   build:
